syntax = "proto3";

option java_package = "ru.bgitu.feature.schedule_widget";
option java_multiple_files = false;

message WidgetOptionsPb {
    float opacity = 1;
    string theme = 2;
    string text_color = 3;
    string elements_color = 4;
}

message WidgetLessonPb {
    int32 date = 1;
    int32 startAt = 2;
    int32 endAt = 3;
    bool is_lecture = 4;
    string building = 5;
    string classroom = 6;
    string subject = 7;
}

message WidgetDataPb {
    string query_date = 1;
    repeated WidgetLessonPb lessons = 2;
    WidgetOptionsPb options = 3;
    bool is_loading = 4;
    int32 widget_version = 5;
}